--- a/BookStore/config/database.yml
+++ b/BookStore/config/database.yml
@@ -13,13 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: csc4500
-  host: localhost
+  username: <%= Rails.application.secrets[:database][:username] %>
+  password: <%= Rails.application.secrets[:database][:password] %>
+  host: <%= Rails.application.secrets[:database][:host] %>
 
 development:
   <<: *default
-  database: BookStore
+  database: <%= Rails.application.secrets[:database][:name] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
