Added some basic bootstrap

--- a/BookStore/Gemfile
+++ b/BookStore/Gemfile
@@ -36,6 +36,12 @@ gem 'jbuilder', '~> 2.5'
 gem 'pry-rails' 
 
 gem 'rails_admin'
+
+#bootstrap and its dependencies
+gem 'bootstrap', '~> 4.0.0.beta2.1'
+
+gem 'popper_js', '~> 1.12.3'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
